Calendar blank spacing fix

--- a/vtr-ui/src/app/components/ui/ui-smart-performance/ui-smart-performance.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-smart-performance/ui-smart-performance.component.scss
@@ -74,7 +74,7 @@
 			.icomoon {
 				color: #7D5FEF;
 				font-size: 13rem;
-				margin-top: 2rem;
+				margin-top: 1rem;
 				margin-bottom: -2rem;
 				@media #{$breakpoint_xl} {
 					font-size: 12rem;
